# ppp

./: .gitignore  .gitmodules  PPPConfig.cmake  README.md  conf.py  index.md  mkdocs.yml  requirements.txt  roottest.md
PPP2code/: std_lib_facilities.h
ch1-computers_people_and_programming/: README.md  ch1-exercises.md  ch1-review.md  ch1-terms.md
ch2-hello_world/: README.md  ch2-exercises.md  ch2-review.md  ch2-terms.md
ch2-hello_world/drill/: CMakeLists.txt  README.md  main.cpp
ch2-hello_world/exercises/exercise-01/: CMakeLists.txt  README.md  exercise01.md  main.cpp
ch2-hello_world/exercises/exercise-02/: CMakeLists.txt  README.md
ch2-hello_world/exercises/exercise01/: CMakeLists.txt  README.md  output.md
ch2-hello_world/exercises/exercise02/: CMakeLists.txt  README.md  main.cpp
ch2-hello_world/exercises/exercise03/: README.md  main.cpp
ch2-hello_world/exercises/exercise04/: README.md  main.cpp
ch3-objects_types_and_values/: README.md  ch3-exercises.md  ch3-review.md  ch3-terms.md
ch3-objects_types_and_values/drill/: CMakeLists.txt  README.md  letterform01.cpp  letterform02.cpp  letterform03.cpp  letterform04.cpp  letterform05.cpp  letterform06.cpp  letterform07.cpp  letterformoriginal.cpp
ch3-objects_types_and_values/exercises/: README.md  exercise07
ch3-objects_types_and_values/exercises/exercise01/: CMakeLists.txt  README.md  main.cpp
ch3-objects_types_and_values/exercises/exercise02/: README.md
ch3-objects_types_and_values/exercises/exercise03/: README.md  main.cpp
ch3-objects_types_and_values/exercises/exercise04/: CMakeLists.txt  README.md  main.cpp
ch3-objects_types_and_values/exercises/exercise05/: README.md  main.cpp
ch3-objects_types_and_values/exercises/exercise06/: CMakeLists.txt  README.md  main.cpp
ch3-objects_types_and_values/exercises/exercise07/: README.md  main.cpp
ch3-objects_types_and_values/exercises/exercise08/: README.md  main.cpp
ch3-objects_types_and_values/exercises/exercise09/: README.md  main.cpp
ch3-objects_types_and_values/exercises/exercise10/: README.md  main.cpp
ch3-objects_types_and_values/exercises/exercise11/: CMakeLists.txt  README.md  main.cpp  main_improved.cpp
ch3-objects_types_and_values/trythis/: README.md
ch3-objects_types_and_values/trythis/01-name_and_age/: CMakeLists.txt  README.md  main.cpp
ch3-objects_types_and_values/trythis/02-operators/: CMakeLists.txt  README.md  main.cpp
ch3-objects_types_and_values/trythis/03-04-repeated_words/: CMakeLists.txt  README.md  main.cpp
ch3-objects_types_and_values/trythis/05-cruel_world/: CMakeLists.txt  README.md  main.cpp  main_fix.cpp  main_fix2.cpp
ch3-objects_types_and_values/trythis/06-unsafe_conversion/: CMakeLists.txt  README.md  main.cpp  main_char.cpp
ch4-computation/: README.md  ch4-review.md  ch4-terms.md
ch4-computation/drill/: CMakeLists.txt  README.md  loop01.cpp  loop02.cpp  loop03.cpp  loop04.cpp  loop05.cpp  loop06.cpp  loop07.cpp  loop08.cpp  loop09.cpp  loop10.cpp  loop11.cpp
ch4-computation/exercises/: exercise06
ch4-computation/exercises/exercise02/: CMakeLists.txt  README.md  main.cpp  main_solution.cpp
ch4-computation/exercises/exercise03/: CMakeLists.txt  README.md  main.cpp  main_solution.cpp
ch4-computation/exercises/exercise04/: CMakeLists.txt  README.md  main.cpp  main_flip_flop.cpp
ch4-computation/exercises/exercise05/: CMakeLists.txt  README.md  main.cpp
ch4-computation/exercises/exercise06/: CMakeLists.txt  README.md  main.cpp  main_extended.cpp
ch4-computation/exercises/exercise07/: CMakeLists.txt  README.md  main.cpp
ch4-computation/exercises/exercise08/: CMakeLists.txt  README.md  main.cpp
ch4-computation/exercises/exercise09/: CMakeLists.txt  README.md  main.cpp
ch4-computation/exercises/exercise10/: CMakeLists.txt  README.md  main.cpp
ch4-computation/exercises/exercise11/: README.md  main.cpp
ch4-computation/exercises/exercise12/: CMakeLists.txt  README.md  main.cpp
ch4-computation/exercises/exercise13/: CMakeLists.txt  README.md  main.cpp  main_simple.cpp
ch4-computation/exercises/exercise14/: CMakeLists.txt  README.md  main.cpp
ch4-computation/exercises/exercise15/: CMakeLists.txt  README.md  main.cpp
ch4-computation/exercises/exercise16/: CMakeLists.txt  README.md  main.cpp
ch4-computation/exercises/exercise17/: CMakeLists.txt  README.md  main.cpp
ch4-computation/exercises/exercise18/: CMakeLists.txt  README.md  main.cpp
ch4-computation/exercises/exercise19/: CMakeLists.txt  README.md  main.cpp
ch4-computation/exercises/exercise20/: CMakeLists.txt  README.md  main.cpp
ch4-computation/exercises/exercise21/: CMakeLists.txt  README.md  main.cpp
ch4-computation/trythis/01-currency_converter/: CMakeLists.txt  README.md  main.cpp  main_solution.cpp
ch4-computation/trythis/02-currency_converter_switch/: CMakeLists.txt  README.md  main.cpp
ch4-computation/trythis/03-character_loop/: CMakeLists.txt  README.md  main.cpp
ch4-computation/trythis/04-character_loop_for/: CMakeLists.txt  README.md  main.cpp  main_extended.cpp
ch4-computation/trythis/05-square/: CMakeLists.txt  README.md  main.cpp
ch4-computation/trythis/06-bleep/: CMakeLists.txt  README.md  main.cpp  main_extended.cpp
ch5-errors/: README.md  ch5-review.md  ch5-terms.md
ch5-errors/drill/: CMakeLists.txt  README.md  scaffolding.cpp
ch5-errors/exercises/exercise02/: CMakeLists.txt  README.md
ch5-errors/trythis/01-5.3.1-syntax_errors/: README.md  main.cpp
ch5-errors/trythis/01-compiler_response/: CMakeLists.txt  README.md  main.cpp
ch5-errors/trythis/02-5.3.2-type_errors/: README.md  main.cpp
ch5-errors/trythis/02-compiler_response/: README.md  main.cpp
ch5-errors/trythis/03-5.5.3-error_reporting/: CMakeLists.txt  README.md  main_errorcheck.cpp
ch5-errors/trythis/03-error_reporting/: CMakeLists.txt  README.md  (+2 more)
docs/: Makefile  README.md  ch1-computers-people-and-programming.rst  ch1-computers_people_and_programming.rst  ch2-hello_world.rst  ch3-objects_types_and_values.rst  ch4-computation.rst  ch5-errors.rst  conf.py  index.md  index.rst  make.bat  root_link.rst  test.md  test2.md
(+14 files in other folders)
